--- a/MODMAngularJS/Kolombiya cumhuriyeti/src/app/components/navbar/navbar.component.html
+++ b/MODMAngularJS/Kolombiya cumhuriyeti/src/app/components/navbar/navbar.component.html
@@ -31,12 +31,14 @@
                 </button>
             </li>
             <!-- Login Button -->
-            <li class="nav-item">
+           
+             <li class="nav-item">
                 <button class="btn btn-login" routerLink="/login">
                     <i class="material-icons">login</i>
                     <span class="login-text">Login</span>
                 </button>
             </li>
+            <button class="btn btn-primary" routerLink="/register">Register</button>
         </ul>
     </div>
 </nav>
