--- a/MODMAngularJS/Kolombiya cumhuriyeti/src/app/components/navbar/navbar.component.html
+++ b/MODMAngularJS/Kolombiya cumhuriyeti/src/app/components/navbar/navbar.component.html
@@ -24,12 +24,12 @@
             
 
             <!-- Profile Button -->
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <button class="btn btn-profile" routerLink="/user-profile">
                     <i class="material-icons">person</i>
                     <span class="profile-text">Profile</span>
                 </button>
-            </li>
+            </li> -->
             <!-- Login Button -->
            
              <li class="nav-item">
