--- a/MODMAngularJS/Kolombiya cumhuriyeti/src/app/home/home.component.html
+++ b/MODMAngularJS/Kolombiya cumhuriyeti/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<section class="hero">
+    <div class="hero-content">
+      <h1>Bienvenidos a Colombia</h1>
+      <p>Descubre la riqueza natural, cultural y económica de Colombia.</p>
+      <button (click)="navigateTo('tourism')">Explorar Turismo</button>
+    </div>
+    <img src="assets/img/kolombiya.jpg" alt="Colombia Nature" />
+  </section>
