--- a/MODMAngularJS/Kolombiya cumhuriyeti/src/app/login/login.component.html
+++ b/MODMAngularJS/Kolombiya cumhuriyeti/src/app/login/login.component.html
@@ -1,26 +1,26 @@
-<div class="container">
+<div class="login-container">
   <h2>Login</h2>
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
     <div>
-      <label for="email">Email:</label>
-      <input id="email" type="email" formControlName="email" placeholder="Enter your email">
-      <div *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched">
-        <small *ngIf="loginForm.get('email')?.errors?.['required']">Email is required</small>
-        <small *ngIf="loginForm.get('email')?.errors?.['email']">Enter a valid email</small>
-      </div>
+      <label for="username">Username</label>
+      <input
+        type="text"
+        id="username"
+        name="username"
+        [(ngModel)]="loginData.username"
+        required
+      />
     </div>
-
     <div>
-      <label for="password">Password:</label>
-      <input id="password" type="password" formControlName="password" placeholder="Enter your password">
-      <div *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched">
-        <small *ngIf="loginForm.get('password')?.errors?.['required']">Password is required</small>
-        <small *ngIf="loginForm.get('password')?.errors?.['minlength']">
-          Password must be at least 6 characters
-        </small>
-      </div>
+      <label for="password">Password</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        [(ngModel)]="loginData.password"
+        required
+      />
     </div>
-
-    <button type="submit" [disabled]="loginForm.invalid">Login</button>
+    <button type="submit" [disabled]="!loginForm.valid">Login</button>
   </form>
 </div>
