--- a/MODMAngularJS/Kolombiya cumhuriyeti/src/app/register/register.component.html
+++ b/MODMAngularJS/Kolombiya cumhuriyeti/src/app/register/register.component.html
@@ -1,22 +1,36 @@
 <div class="register-container">
-    <h2>Register</h2>
-    <form>
-      <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" id="username" placeholder="Enter your username" />
-      </div>
-  
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" id="email" placeholder="Enter your email" />
-      </div>
-  
-      <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" id="password" placeholder="Enter your password" />
-      </div>
-  
-      <button type="submit" class="btn btn-primary">Register</button>
-    </form>
-  </div>
-  
+  <h2>Register</h2>
+  <form (ngSubmit)="onSubmit()" #registerForm="ngForm">
+    <div>
+      <label for="username">Username</label>
+      <input
+        type="text"
+        id="username"
+        name="username"
+        [(ngModel)]="registerData.username"
+        required
+      />
+    </div>
+    <div>
+      <label for="email">Email</label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        [(ngModel)]="registerData.email"
+        required
+      />
+    </div>
+    <div>
+      <label for="password">Password</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        [(ngModel)]="registerData.password"
+        required
+      />
+    </div>
+    <button type="submit" [disabled]="!registerForm.valid">Register</button>
+  </form>
+</div>
